LPS-158832 Generate language files

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -8338,7 +8338,7 @@ javax.portlet.title.com_liferay_calendar_web_portlet_CalendarPortlet=kalender (A
 javax.portlet.title.com_liferay_change_tracking_web_portlet_PublicationsPortlet=Publikationer (Automatic Translation)
 javax.portlet.title.com_liferay_chart_sample_web_portlet_ChartSamplePortlet=Eksempel på diagram (Automatic Translation)
 javax.portlet.title.com_liferay_clay_sample_web_portlet_ClaySamplePortlet=Lerprøve (Automatic Translation)
-javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Fjernapps (Automatic Translation)
+javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Client Extensions (Automatic Copy)
 javax.portlet.title.com_liferay_comment_page_comments_web_portlet_PageCommentsPortlet=Sidekommentarer
 javax.portlet.title.com_liferay_comment_web_portlet_CommentPortlet=Kommentarer
 javax.portlet.title.com_liferay_commerce_account_admin_web_internal_portlet_CommerceAccountAdminPortlet=Konti
