--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -8338,7 +8338,7 @@ javax.portlet.title.com_liferay_calendar_web_portlet_CalendarPortlet=Kalendář
 javax.portlet.title.com_liferay_change_tracking_web_portlet_PublicationsPortlet=Publications (Automatic Copy)
 javax.portlet.title.com_liferay_chart_sample_web_portlet_ChartSamplePortlet=Chart Sample (Automatic Copy)
 javax.portlet.title.com_liferay_clay_sample_web_portlet_ClaySamplePortlet=Clay Sample (Automatic Copy)
-javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Remote Apps (Automatic Copy)
+javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Client Extensions (Automatic Copy)
 javax.portlet.title.com_liferay_comment_page_comments_web_portlet_PageCommentsPortlet=Komentáře ke stránce
 javax.portlet.title.com_liferay_comment_web_portlet_CommentPortlet=Komentáře
 javax.portlet.title.com_liferay_commerce_account_admin_web_internal_portlet_CommerceAccountAdminPortlet=Účty
