--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -8338,7 +8338,7 @@ javax.portlet.title.com_liferay_calendar_web_portlet_CalendarPortlet=kalender (A
 javax.portlet.title.com_liferay_change_tracking_web_portlet_PublicationsPortlet=Väljaanded (Automatic Translation)
 javax.portlet.title.com_liferay_chart_sample_web_portlet_ChartSamplePortlet=Diagrammi näidis (Automatic Translation)
 javax.portlet.title.com_liferay_clay_sample_web_portlet_ClaySamplePortlet=Saviproov (Automatic Translation)
-javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Kaugrakendused (Automatic Translation)
+javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Client Extensions (Automatic Copy)
 javax.portlet.title.com_liferay_comment_page_comments_web_portlet_PageCommentsPortlet=Lehtede kommentaarid
 javax.portlet.title.com_liferay_comment_web_portlet_CommentPortlet=Kommentaarid
 javax.portlet.title.com_liferay_commerce_account_admin_web_internal_portlet_CommerceAccountAdminPortlet=Kontod
