--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -8338,7 +8338,7 @@ javax.portlet.title.com_liferay_calendar_web_portlet_CalendarPortlet=Kalenteri
 javax.portlet.title.com_liferay_change_tracking_web_portlet_PublicationsPortlet=Muutosluettelot
 javax.portlet.title.com_liferay_chart_sample_web_portlet_ChartSamplePortlet=Kaavioesimerkki
 javax.portlet.title.com_liferay_clay_sample_web_portlet_ClaySamplePortlet=Clay-esimerkki
-javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Etäsovellukset
+javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Client Extensions (Automatic Copy)
 javax.portlet.title.com_liferay_comment_page_comments_web_portlet_PageCommentsPortlet=Sivun kommentit
 javax.portlet.title.com_liferay_comment_web_portlet_CommentPortlet=Kommentit
 javax.portlet.title.com_liferay_commerce_account_admin_web_internal_portlet_CommerceAccountAdminPortlet=Tilit
