--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -8338,7 +8338,7 @@ javax.portlet.title.com_liferay_calendar_web_portlet_CalendarPortlet=Calendrier
 javax.portlet.title.com_liferay_change_tracking_web_portlet_PublicationsPortlet=Publications
 javax.portlet.title.com_liferay_chart_sample_web_portlet_ChartSamplePortlet=Échantillon de carte
 javax.portlet.title.com_liferay_clay_sample_web_portlet_ClaySamplePortlet=Échantillon d'argile
-javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Applications distantes
+javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Client Extensions (Automatic Copy)
 javax.portlet.title.com_liferay_comment_page_comments_web_portlet_PageCommentsPortlet=Commentaires sur la page
 javax.portlet.title.com_liferay_comment_web_portlet_CommentPortlet=Commentaires
 javax.portlet.title.com_liferay_commerce_account_admin_web_internal_portlet_CommerceAccountAdminPortlet=Comptes
