--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -8338,7 +8338,7 @@ javax.portlet.title.com_liferay_calendar_web_portlet_CalendarPortlet=Calendario
 javax.portlet.title.com_liferay_change_tracking_web_portlet_PublicationsPortlet=Publicacións
 javax.portlet.title.com_liferay_chart_sample_web_portlet_ChartSamplePortlet=Exemplo de gráficos
 javax.portlet.title.com_liferay_clay_sample_web_portlet_ClaySamplePortlet=Exemplo de Clay
-javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Aplicacións remotas
+javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Client Extensions (Automatic Copy)
 javax.portlet.title.com_liferay_comment_page_comments_web_portlet_PageCommentsPortlet=Comentarios da páxina
 javax.portlet.title.com_liferay_comment_web_portlet_CommentPortlet=Comentarios
 javax.portlet.title.com_liferay_commerce_account_admin_web_internal_portlet_CommerceAccountAdminPortlet=Contas
