--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -8338,7 +8338,7 @@ javax.portlet.title.com_liferay_calendar_web_portlet_CalendarPortlet=Kalender
 javax.portlet.title.com_liferay_change_tracking_web_portlet_PublicationsPortlet=Publikasi (Automatic Translation)
 javax.portlet.title.com_liferay_chart_sample_web_portlet_ChartSamplePortlet=Sampel Bagan (Automatic Translation)
 javax.portlet.title.com_liferay_clay_sample_web_portlet_ClaySamplePortlet=Sampel Tanah Liat (Automatic Translation)
-javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Aplikasi jarak jauh (Automatic Translation)
+javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Client Extensions (Automatic Copy)
 javax.portlet.title.com_liferay_comment_page_comments_web_portlet_PageCommentsPortlet=Halaman Komentar
 javax.portlet.title.com_liferay_comment_web_portlet_CommentPortlet=Komentar
 javax.portlet.title.com_liferay_commerce_account_admin_web_internal_portlet_CommerceAccountAdminPortlet=Account
