--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -8337,7 +8337,7 @@ javax.portlet.title.com_liferay_calendar_web_portlet_CalendarPortlet=Calendario
 javax.portlet.title.com_liferay_change_tracking_web_portlet_PublicationsPortlet=Pubblicazioni
 javax.portlet.title.com_liferay_chart_sample_web_portlet_ChartSamplePortlet=Esempio di grafico (Automatic Translation)
 javax.portlet.title.com_liferay_clay_sample_web_portlet_ClaySamplePortlet=Esempio Clay
-javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=App remote (Automatic Translation)
+javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Client Extensions (Automatic Copy)
 javax.portlet.title.com_liferay_comment_page_comments_web_portlet_PageCommentsPortlet=Commenti di pagina
 javax.portlet.title.com_liferay_comment_web_portlet_CommentPortlet=Commenti
 javax.portlet.title.com_liferay_commerce_account_admin_web_internal_portlet_CommerceAccountAdminPortlet=Account
