--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -8338,7 +8338,7 @@ javax.portlet.title.com_liferay_calendar_web_portlet_CalendarPortlet=Kalendorius
 javax.portlet.title.com_liferay_change_tracking_web_portlet_PublicationsPortlet=Leidinių (Automatic Translation)
 javax.portlet.title.com_liferay_chart_sample_web_portlet_ChartSamplePortlet=Diagramos pavyzdys (Automatic Translation)
 javax.portlet.title.com_liferay_clay_sample_web_portlet_ClaySamplePortlet=Molio mėginys (Automatic Translation)
-javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Nuotolinės programos (Automatic Translation)
+javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Client Extensions (Automatic Copy)
 javax.portlet.title.com_liferay_comment_page_comments_web_portlet_PageCommentsPortlet=Puslapio komentarai (Automatic Translation)
 javax.portlet.title.com_liferay_comment_web_portlet_CommentPortlet=Komentarai
 javax.portlet.title.com_liferay_commerce_account_admin_web_internal_portlet_CommerceAccountAdminPortlet=Sąskaitas (Automatic Translation)
