--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -8338,7 +8338,7 @@ javax.portlet.title.com_liferay_calendar_web_portlet_CalendarPortlet=Calendário
 javax.portlet.title.com_liferay_change_tracking_web_portlet_PublicationsPortlet=Visão Geral
 javax.portlet.title.com_liferay_chart_sample_web_portlet_ChartSamplePortlet=Amostra do Chart
 javax.portlet.title.com_liferay_clay_sample_web_portlet_ClaySamplePortlet=Amostra do Clay
-javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Aplicativos remotos
+javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Client Extensions (Automatic Copy)
 javax.portlet.title.com_liferay_comment_page_comments_web_portlet_PageCommentsPortlet=Comentários da Página
 javax.portlet.title.com_liferay_comment_web_portlet_CommentPortlet=Comentários de Fórum
 javax.portlet.title.com_liferay_commerce_account_admin_web_internal_portlet_CommerceAccountAdminPortlet=Contas
