--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -8338,7 +8338,7 @@ javax.portlet.title.com_liferay_calendar_web_portlet_CalendarPortlet=Kalender
 javax.portlet.title.com_liferay_change_tracking_web_portlet_PublicationsPortlet=Ändringslistor
 javax.portlet.title.com_liferay_chart_sample_web_portlet_ChartSamplePortlet=Diagramexempel
 javax.portlet.title.com_liferay_clay_sample_web_portlet_ClaySamplePortlet=Clay-exempel
-javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Fjärrappar
+javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Client Extensions (Automatic Copy)
 javax.portlet.title.com_liferay_comment_page_comments_web_portlet_PageCommentsPortlet=Kommentarer
 javax.portlet.title.com_liferay_comment_web_portlet_CommentPortlet=Kommentarer
 javax.portlet.title.com_liferay_commerce_account_admin_web_internal_portlet_CommerceAccountAdminPortlet=Konton
