--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -8338,7 +8338,7 @@ javax.portlet.title.com_liferay_calendar_web_portlet_CalendarPortlet=lịch (Aut
 javax.portlet.title.com_liferay_change_tracking_web_portlet_PublicationsPortlet=Ấn phẩm (Automatic Translation)
 javax.portlet.title.com_liferay_chart_sample_web_portlet_ChartSamplePortlet=Mẫu Biểu đồ (Automatic Translation)
 javax.portlet.title.com_liferay_clay_sample_web_portlet_ClaySamplePortlet=Mẫu đất sét (Automatic Translation)
-javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Ứng dụng từ xa (Automatic Translation)
+javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Client Extensions (Automatic Copy)
 javax.portlet.title.com_liferay_comment_page_comments_web_portlet_PageCommentsPortlet=Trang bình luận
 javax.portlet.title.com_liferay_comment_web_portlet_CommentPortlet=Bình luận
 javax.portlet.title.com_liferay_commerce_account_admin_web_internal_portlet_CommerceAccountAdminPortlet=Tài khoản
