--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -8338,7 +8338,7 @@ javax.portlet.title.com_liferay_calendar_web_portlet_CalendarPortlet=日历
 javax.portlet.title.com_liferay_change_tracking_web_portlet_PublicationsPortlet=变更列表
 javax.portlet.title.com_liferay_chart_sample_web_portlet_ChartSamplePortlet=图表样例
 javax.portlet.title.com_liferay_clay_sample_web_portlet_ClaySamplePortlet=Clay样例
-javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=远程应用
+javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Client Extensions (Automatic Copy)
 javax.portlet.title.com_liferay_comment_page_comments_web_portlet_PageCommentsPortlet=页面评论
 javax.portlet.title.com_liferay_comment_web_portlet_CommentPortlet=评论
 javax.portlet.title.com_liferay_commerce_account_admin_web_internal_portlet_CommerceAccountAdminPortlet=账户
