--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -2240,6 +2240,7 @@ b2x=بی۲ ایکس (Automatic Translation)
 back=بازگشت
 back-to-cart=برگشت به کارت
 back-to-menu=بازگشت به منو (Automatic Translation)
+back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
 back-to-search=بازگشت به جست‌و‌جو
 back-to-selection=بازگشت برای انتخاب
 back-to-the-list=Back to the List (Automatic Copy)
