--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
@@ -2240,6 +2240,7 @@ b2x=B2X (Automatic Copy)
 back=Natrag
 back-to-cart=Natrag na košaricu
 back-to-menu=Back to Menu (Automatic Copy)
+back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
 back-to-search=Natrag na pretraživanje
 back-to-selection=Natrag na odabir
 back-to-the-list=Back to the List (Automatic Copy)
