--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -2240,6 +2240,7 @@ b2x=B2X
 back=Vissza
 back-to-cart=Vissza az bevásárlókocsihoz
 back-to-menu=Vissza a menübe
+back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
 back-to-search=Vissza a kereséshez
 back-to-selection=Vissza a kiválasztáshoz
 back-to-the-list=Vissza a listához
