--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -2240,6 +2240,7 @@ b2x=B2X (Automatic Translation)
 back=Tilbake
 back-to-cart=Tilbake til handlekurv
 back-to-menu=Tilbake til meny (Automatic Translation)
+back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
 back-to-search=Tilbake til søk
 back-to-selection=Tilbake til valgt
 back-to-the-list=Back to the List (Automatic Copy)
