--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -2240,6 +2240,7 @@ b2x=B2X (Automatic Translation)
 back=Назад
 back-to-cart=Назад в корзину (Automatic Translation)
 back-to-menu=Назад в меню (Automatic Translation)
+back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
 back-to-search=Назад к поиску
 back-to-selection=Обратно к выбору
 back-to-the-list=Back to the List (Automatic Copy)
