--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -2240,6 +2240,7 @@ b2x=B2X (Automatic Translation)
 back=Nazaj
 back-to-cart=Nazaj v košarico (Automatic Translation)
 back-to-menu=Nazaj v meni (Automatic Translation)
+back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
 back-to-search=Nazaj na iskanje (Automatic Translation)
 back-to-selection=Nazaj na izbor (Automatic Translation)
 back-to-the-list=Back to the List (Automatic Copy)
