--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS.properties
@@ -2240,6 +2240,7 @@ b2x=B2X (Automatic Copy)
 back=Назад
 back-to-cart=Back to Cart (Automatic Copy)
 back-to-menu=Back to Menu (Automatic Copy)
+back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
 back-to-search=Повратак на Претрагу
 back-to-selection=Повратак на Селекцију
 back-to-the-list=Back to the List (Automatic Copy)
