--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_MX.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_MX.properties
@@ -2240,6 +2240,7 @@ b2x=B2X
 back=Atrás
 back-to-cart=Volver al carrito
 back-to-menu=Volver al menú
+back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
 back-to-search=Volver a la búsqueda
 back-to-selection=Volver a la lista de selección
 back-to-the-list=Volver a la lista
