--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
@@ -2240,6 +2240,7 @@ b2x=B2X (Automatic Copy)
 back=Atzealdea
 back-to-cart=Back to Cart (Automatic Copy)
 back-to-menu=Back to Menu (Automatic Copy)
+back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
 back-to-search=Itzuli bilaketara
 back-to-selection=Aukeraketara Itzuli
 back-to-the-list=Back to the List (Automatic Copy)
