--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -2240,6 +2240,7 @@ b2x=B2X
 back=Takaisin
 back-to-cart=Takaisin ostoskoriin
 back-to-menu=Takaisin Valikkoon
+back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
 back-to-search=Palaa hakuun
 back-to-selection=Takaisin valintaan
 back-to-the-list=Takaisin luetteloon
