--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -2240,6 +2240,7 @@ b2x=B2X (Automatic Translation)
 back=Kembali
 back-to-cart=Kembali ke Keranjang (Automatic Translation)
 back-to-menu=Kembali ke Menu (Automatic Translation)
+back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
 back-to-search=Kembali ke Pencarian
 back-to-selection=Kembali ke Pemilihan
 back-to-the-list=Back to the List (Automatic Copy)
