--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -2240,6 +2240,7 @@ b2x=B2X (Automatic Translation)
 back=חזרה
 back-to-cart=בחזרה לעגלה
 back-to-menu=חזרה לתפריט (Automatic Translation)
+back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
 back-to-search=חזרה לחיפוש
 back-to-selection=חזרה לבחירה
 back-to-the-list=Back to the List (Automatic Copy)
