--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -2240,6 +2240,7 @@ b2x=B2X
 back=戻る
 back-to-cart=カートに戻る
 back-to-menu=メニューに戻る
+back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
 back-to-search=検索に戻る
 back-to-selection=選択画面へ戻る
 back-to-the-list=リストに戻る
