--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -2240,6 +2240,7 @@ b2x=B2X (Automatic Translation)
 back=Kembali (Automatic Translation)
 back-to-cart=Kembali ke Troli (Automatic Translation)
 back-to-menu=Kembali ke Menu (Automatic Translation)
+back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
 back-to-search=Kembali ke Gelintar (Automatic Translation)
 back-to-selection=Kembali ke Pilihan (Automatic Translation)
 back-to-the-list=Back to the List (Automatic Copy)
