--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -2240,6 +2240,7 @@ b2x=B2X
 back=Voltar
 back-to-cart=Voltar para o Carrinho
 back-to-menu=Voltar ao Menu
+back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
 back-to-search=Voltar para a Busca
 back-to-selection=Retornar a seleção
 back-to-the-list=Voltar à lista
