--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -2240,6 +2240,7 @@ b2x=B2X (Automatic Translation)
 back=Späť
 back-to-cart=Späť do košíka
 back-to-menu=Späť na ponuku (Automatic Translation)
+back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
 back-to-search=Naspäť na vyhľadávanie
 back-to-selection=Späť na výber
 back-to-the-list=Back to the List (Automatic Copy)
