--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -2240,6 +2240,7 @@ b2x=B2X (Automatic Translation)
 back=Geri
 back-to-cart=Sepete Geri Dön (Automatic Translation)
 back-to-menu=Menüye Geri Dön (Automatic Translation)
+back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
 back-to-search=Aramaya Geri Dön (Automatic Translation)
 back-to-selection=Seçime Geri Dön (Automatic Translation)
 back-to-the-list=Back to the List (Automatic Copy)
