--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -2240,6 +2240,7 @@ b2x=B2X (Івате) (Automatic Translation)
 back=Повернутися
 back-to-cart=Назад до кошика (Automatic Translation)
 back-to-menu=Повернутися до меню (Automatic Translation)
+back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
 back-to-search=Повернутися до пошуку (Automatic Translation)
 back-to-selection=Повернутися до виділеного фрагмента (Automatic Translation)
 back-to-the-list=Back to the List (Automatic Copy)
