--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -2240,6 +2240,7 @@ b2x=B2X
 back=返回
 back-to-cart=返回购物车
 back-to-menu=返回菜单
+back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
 back-to-search=返回查找
 back-to-selection=返回重新选择
 back-to-the-list=返回列表
