--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -2261,6 +2261,11 @@ background-state-info=Fond d'état Info
 background-state-success=Fond d'état Réussite
 background-state-warning=Fond d'état Avertissement
 background-styles=Styles de fonds
+background-task-manager-configuration-name=Background Task Manager Configuration (Automatic Copy)
+background-task-workers-core-size=Workers Core Size (Automatic Copy)
+background-task-workers-core-size-help=The number of worker threads always available for executing background tasks. This setting cannot exceed the workers maximum size setting. (Automatic Copy)
+background-task-workers-max-size=Workers Maximum Size (Automatic Copy)
+background-task-workers-max-size-help=The maximum number of worker threads for executing background tasks. (Automatic Copy)
 backspace=Retour arrière
 bad-request=Mauvaise requête
 ban-date=Date d'interdiction
@@ -7769,6 +7774,8 @@ import-siteminder-users-from-ldap=Importation en provenance de LDAP
 import-siteminder-users-from-ldap-help=Si cette option est cochée, les utilisateurs authentifiés sur SiteMinder qui n'existent pas dans le portail sont importés depuis le LDAP. Le LDAP doit être activé.
 import-status=Statut d'importation
 import-structure=Importer la structure
+import-task-isolation=Import Task Isolation Level (Automatic Copy)
+import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default value is GROUP, this means that only one site template propagation import task can run at the same time for the same target site. However, you can set its value to COMPANY as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal, in exchange for delaying site template propagations. (Automatic Copy)
 import-translation=Importer la traduction
 import-translations=Importer des traductions
 import-user-preferences-help=Les préférences de l'utilisateur ne peuvent être importées avec succès que quand les UUIDs de l'utilisateur correspondent.
@@ -8960,6 +8967,8 @@ layout-set-prototype-configuration-description=Les paramètres de cette configur
 layout-set-prototype-configuration-name=Modèles de site
 layout-set-prototype-intranet-site-description=Site avec documents et actualités
 layout-set-prototype-intranet-site-title=Site intranet
+layout-set-prototype-system-configuration-description=Configure system level site template options (Automatic Copy)
+layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
 layout-template=Modèle de disposition
 layout-template-1-2-1-columns-i=1-2-1 Colonnes (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 Colonnes (70/30)
