--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -2260,6 +2260,11 @@ background-state-info=Background State Info (Automatic Copy)
 background-state-success=Background State Success (Automatic Copy)
 background-state-warning=Background State Warning (Automatic Copy)
 background-styles=Stili dello Sfondo
+background-task-manager-configuration-name=Background Task Manager Configuration (Automatic Copy)
+background-task-workers-core-size=Workers Core Size (Automatic Copy)
+background-task-workers-core-size-help=The number of worker threads always available for executing background tasks. This setting cannot exceed the workers maximum size setting. (Automatic Copy)
+background-task-workers-max-size=Workers Maximum Size (Automatic Copy)
+background-task-workers-max-size-help=The maximum number of worker threads for executing background tasks. (Automatic Copy)
 backspace=Backspace (Automatic Translation)
 bad-request=Richiesta Errata
 ban-date=Data di Blocco
@@ -7768,6 +7773,8 @@ import-siteminder-users-from-ldap=Importazione da LDAP
 import-siteminder-users-from-ldap-help=Se questa opzione è selezionata, gli utenti autenticati da SiteMinder che non sono presenti nel portale vengono importati da LDAP. LDAP deve essere attivato.
 import-status=Import Status (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
+import-task-isolation=Import Task Isolation Level (Automatic Copy)
+import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default value is GROUP, this means that only one site template propagation import task can run at the same time for the same target site. However, you can set its value to COMPANY as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal, in exchange for delaying site template propagations. (Automatic Copy)
 import-translation=Importa traduzione (Automatic Translation)
 import-translations=Import Translations (Automatic Copy)
 import-user-preferences-help=Le preferenze possono essere importate con successo solo quando gli UUID dell'utente coincidono.
@@ -8959,6 +8966,8 @@ layout-set-prototype-configuration-description=Configure when automatic propagat
 layout-set-prototype-configuration-name=Modelli di sito
 layout-set-prototype-intranet-site-description=Sito con Documenti e News
 layout-set-prototype-intranet-site-title=Sito Intranet
+layout-set-prototype-system-configuration-description=Configure system level site template options (Automatic Copy)
+layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
 layout-template=Modello Impaginazione
 layout-template-1-2-1-columns-i=1-2-1 Colonne (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 Colonne (70/30)
