--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -2261,6 +2261,11 @@ background-state-info=Background State Info (Automatic Copy)
 background-state-success=Background State Success (Automatic Copy)
 background-state-warning=Background State Warning (Automatic Copy)
 background-styles=பிண்ணணியில் உள்ள ஸ்டைல்ஸ்கள்
+background-task-manager-configuration-name=Background Task Manager Configuration (Automatic Copy)
+background-task-workers-core-size=Workers Core Size (Automatic Copy)
+background-task-workers-core-size-help=The number of worker threads always available for executing background tasks. This setting cannot exceed the workers maximum size setting. (Automatic Copy)
+background-task-workers-max-size=Workers Maximum Size (Automatic Copy)
+background-task-workers-max-size-help=The maximum number of worker threads for executing background tasks. (Automatic Copy)
 backspace=Backspace (Automatic Copy)
 bad-request=தவறான கோரிக்கை
 ban-date=தேதி தடை
@@ -7769,6 +7774,8 @@ import-siteminder-users-from-ldap=LDAP-ல் இருந்து இறக்
 import-siteminder-users-from-ldap-help=இது தேர்ந்தெடுக்கப்பட்டால், போர்ட்டலில் இல்லாத சைட்மைன்டரில் இருந்து பயனர்கள் ldap ல் இருந்து இறக்குமதி செய்யப்படுகின்றன. LDAP செயலாக்கப்பட வேண்டும்.
 import-status=Import Status (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
+import-task-isolation=Import Task Isolation Level (Automatic Copy)
+import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default value is GROUP, this means that only one site template propagation import task can run at the same time for the same target site. However, you can set its value to COMPANY as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal, in exchange for delaying site template propagations. (Automatic Copy)
 import-translation=Import Translation (Automatic Copy)
 import-translations=Import Translations (Automatic Copy)
 import-user-preferences-help=பயனர் UUIDs பொருந்தும் போது பயனர் விருப்பங்களை மட்டுமே வெற்றிகரமாக இறக்குமதி செய்ய முடியும்.
@@ -8958,6 +8965,8 @@ layout-set-prototype-configuration-description=Configure when automatic propagat
 layout-set-prototype-configuration-name=தளத்தின் டெம்ப்ளேட்
 layout-set-prototype-intranet-site-description=ஆவணங்கள் மற்றும் செய்தி தளம்
 layout-set-prototype-intranet-site-title=அக இணைய தளம்
+layout-set-prototype-system-configuration-description=Configure system level site template options (Automatic Copy)
+layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
 layout-template=Layout Template (Automatic Copy)
 layout-template-1-2-1-columns-i=1-2-1 பத்திகள் (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 பத்திகள் (70/50)
