--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_MX.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_MX.properties
@@ -2261,6 +2261,11 @@ background-state-info=Fondo de estado de información
 background-state-success=Fondo de estado de operación correcta
 background-state-warning=Fondo de estado de advertencia
 background-styles=Estilos del fondo
+background-task-manager-configuration-name=Background Task Manager Configuration (Automatic Copy)
+background-task-workers-core-size=Workers Core Size (Automatic Copy)
+background-task-workers-core-size-help=The number of worker threads always available for executing background tasks. This setting cannot exceed the workers maximum size setting. (Automatic Copy)
+background-task-workers-max-size=Workers Maximum Size (Automatic Copy)
+background-task-workers-max-size-help=The maximum number of worker threads for executing background tasks. (Automatic Copy)
 backspace=Retroceso
 bad-request=Petición errónea
 ban-date=Fecha del bloqueo
@@ -7769,6 +7774,8 @@ import-siteminder-users-from-ldap=Importar usuarios de LDAP
 import-siteminder-users-from-ldap-help=Si se activa esta opción, los usuarios autenticados desde SiteMinder que no existan en el portal se importarán desde LDAP. LDAP debe estar habilitado.
 import-status=Estado de la importación
 import-structure=Importar estructura
+import-task-isolation=Import Task Isolation Level (Automatic Copy)
+import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default value is GROUP, this means that only one site template propagation import task can run at the same time for the same target site. However, you can set its value to COMPANY as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal, in exchange for delaying site template propagations. (Automatic Copy)
 import-translation=Importar traducción
 import-translations=Importar traducciones
 import-user-preferences-help=Las preferencias de usuario sólo pueden importarse cuando coinciden los UUIDs de usuario.
@@ -8960,6 +8967,8 @@ layout-set-prototype-configuration-description=Los ajustes en esta configuració
 layout-set-prototype-configuration-name=Plantillas de sitio web
 layout-set-prototype-intranet-site-description=Sitio con documentos y noticias
 layout-set-prototype-intranet-site-title=Sitio de intranet
+layout-set-prototype-system-configuration-description=Configure system level site template options (Automatic Copy)
+layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
 layout-template=Plantilla de página
 layout-template-1-2-1-columns-i=1-2-1 Columnas (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 Columnas (70/30)
