--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -2261,6 +2261,11 @@ background-state-info=Tausta tila info
 background-state-success=Tausta tila onnistuminen
 background-state-warning=Tausta tila varoitus
 background-styles=Taustan tyyli
+background-task-manager-configuration-name=Background Task Manager Configuration (Automatic Copy)
+background-task-workers-core-size=Workers Core Size (Automatic Copy)
+background-task-workers-core-size-help=The number of worker threads always available for executing background tasks. This setting cannot exceed the workers maximum size setting. (Automatic Copy)
+background-task-workers-max-size=Workers Maximum Size (Automatic Copy)
+background-task-workers-max-size-help=The maximum number of worker threads for executing background tasks. (Automatic Copy)
 backspace=Askelpalautin
 bad-request=Viallinen pyyntö
 ban-date=Eston aika
@@ -7769,6 +7774,8 @@ import-siteminder-users-from-ldap=Tuo LDAP:sta
 import-siteminder-users-from-ldap-help=Jos tämä on valittuna, SiteMinderissä todennetut käyttäjät, joita ei ole portaalissa, tuodaan LDAP:sta. LDAP on oltava käytössä.
 import-status=Tuonnin tila
 import-structure=Tuo rakenne
+import-task-isolation=Import Task Isolation Level (Automatic Copy)
+import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default value is GROUP, this means that only one site template propagation import task can run at the same time for the same target site. However, you can set its value to COMPANY as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal, in exchange for delaying site template propagations. (Automatic Copy)
 import-translation=Tuo Käännös
 import-translations=Tuo käännöksiä
 import-user-preferences-help=Käyttäjämääritykset voidaan tuoda onnistuneesti kun käyttäjän UUID ovat yhtenevät.
@@ -8958,6 +8965,8 @@ layout-set-prototype-configuration-description=Tämän määrityksen asetukset a
 layout-set-prototype-configuration-name=Sivustomallit
 layout-set-prototype-intranet-site-description=Asiakirjoja ja uutisia sisältävä sivusto
 layout-set-prototype-intranet-site-title=Intranet sivusto
+layout-set-prototype-system-configuration-description=Configure system level site template options (Automatic Copy)
+layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
 layout-template=Leiska
 layout-template-1-2-1-columns-i=1-2-1 Sarakkeet (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 Sarakkeet (70/30)
