--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -2261,6 +2261,11 @@ background-state-info=Background State Info (Automatic Copy)
 background-state-success=Background State Success (Automatic Copy)
 background-state-warning=Background State Warning (Automatic Copy)
 background-styles=बॅकग्राउंड स्टाइल्स
+background-task-manager-configuration-name=Background Task Manager Configuration (Automatic Copy)
+background-task-workers-core-size=Workers Core Size (Automatic Copy)
+background-task-workers-core-size-help=The number of worker threads always available for executing background tasks. This setting cannot exceed the workers maximum size setting. (Automatic Copy)
+background-task-workers-max-size=Workers Maximum Size (Automatic Copy)
+background-task-workers-max-size-help=The maximum number of worker threads for executing background tasks. (Automatic Copy)
 backspace=बैकस्पेस (Automatic Translation)
 bad-request=खराब रिक्वेस्ट
 ban-date=प्रतिबंध दिनांक
@@ -7769,6 +7774,8 @@ import-siteminder-users-from-ldap=LDAP से इम्पोर्ट करे
 import-siteminder-users-from-ldap-help=यदि यह जांच की जाती है, तो साइटमिंदर से प्रमाणित उपयोगकर्ता जो पोर्टल में मौजूद नहीं हैं, एलडीएपी से आयात किए जाते हैं। एलडीएपी को सक्षम किया जाना चाहिए। (Automatic Translation)
 import-status=Import Status (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
+import-task-isolation=Import Task Isolation Level (Automatic Copy)
+import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default value is GROUP, this means that only one site template propagation import task can run at the same time for the same target site. However, you can set its value to COMPANY as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal, in exchange for delaying site template propagations. (Automatic Copy)
 import-translation=आयात अनुवाद (Automatic Translation)
 import-translations=Import Translations (Automatic Copy)
 import-user-preferences-help=उपयोगकर्ता की प्राथमिकताओं को तभी सफलतापूर्वक आयात किया जा सकता है जब उपयोगकर्ता यूयूआईडी मैच करे। (Automatic Translation)
@@ -8958,6 +8965,8 @@ layout-set-prototype-configuration-description=Configure when automatic propagat
 layout-set-prototype-configuration-name=साइट टेमप्लेट्स
 layout-set-prototype-intranet-site-description=दस्तावेजों और समाचार के साथ साइट (Automatic Translation)
 layout-set-prototype-intranet-site-title=इंट्रानेट साइट (Automatic Translation)
+layout-set-prototype-system-configuration-description=Configure system level site template options (Automatic Copy)
+layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
 layout-template=लेआउट टेम्पलेट
 layout-template-1-2-1-columns-i=1-2-1 कॉलम (50/50) (Automatic Translation)
 layout-template-1-2-1-columns-ii=1-2-1 कॉलम (70/30) (Automatic Translation)
