--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -2261,6 +2261,11 @@ background-state-info=状態の背景 (情報)
 background-state-success=状態の背景 (成功)
 background-state-warning=状態の背景 (警告)
 background-styles=背景のスタイル
+background-task-manager-configuration-name=Background Task Manager Configuration (Automatic Copy)
+background-task-workers-core-size=Workers Core Size (Automatic Copy)
+background-task-workers-core-size-help=The number of worker threads always available for executing background tasks. This setting cannot exceed the workers maximum size setting. (Automatic Copy)
+background-task-workers-max-size=Workers Maximum Size (Automatic Copy)
+background-task-workers-max-size-help=The maximum number of worker threads for executing background tasks. (Automatic Copy)
 backspace=バックスペース
 bad-request=不正なリクエスト
 ban-date=アクセス禁止開始日
@@ -7769,6 +7774,8 @@ import-siteminder-users-from-ldap=LDAPからインポート
 import-siteminder-users-from-ldap-help=これがチェックされている場合、SiteMinderに認証されて、ポータルに存在しないユーザーはLDAPからインポートされます。LDAPが有効になっているか確認してください。
 import-status=インポートのステータス
 import-structure=構造をインポート
+import-task-isolation=Import Task Isolation Level (Automatic Copy)
+import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default value is GROUP, this means that only one site template propagation import task can run at the same time for the same target site. However, you can set its value to COMPANY as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal, in exchange for delaying site template propagations. (Automatic Copy)
 import-translation=翻訳のインポート
 import-translations=翻訳のインポート
 import-user-preferences-help=ユーザーとのUUIDが一致しない限りユーザー設定をインポートできません。
@@ -8960,6 +8967,8 @@ layout-set-prototype-configuration-description=この設定の設定値により
 layout-set-prototype-configuration-name=サイトテンプレート
 layout-set-prototype-intranet-site-description=ドキュメントとニュースのサイト
 layout-set-prototype-intranet-site-title=イントラネットサイト
+layout-set-prototype-system-configuration-description=Configure system level site template options (Automatic Copy)
+layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
 layout-template=レイアウトテンプレート
 layout-template-1-2-1-columns-i=1-2-1 カラム (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 カラム (70/30)
