--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -2261,6 +2261,11 @@ background-state-info=배경 상태 정보
 background-state-success=배경 상태 성공
 background-state-warning=배경 상태 주의
 background-styles=배경 작풍
+background-task-manager-configuration-name=Background Task Manager Configuration (Automatic Copy)
+background-task-workers-core-size=Workers Core Size (Automatic Copy)
+background-task-workers-core-size-help=The number of worker threads always available for executing background tasks. This setting cannot exceed the workers maximum size setting. (Automatic Copy)
+background-task-workers-max-size=Workers Maximum Size (Automatic Copy)
+background-task-workers-max-size-help=The maximum number of worker threads for executing background tasks. (Automatic Copy)
 backspace=백스페이스
 bad-request=나쁜 요구
 ban-date=금지 날짜
@@ -7769,6 +7774,8 @@ import-siteminder-users-from-ldap=LDAP에서 수입품
 import-siteminder-users-from-ldap-help=이 옵션을 선택하면 포털에 존재하지 않는 SiteMinder에서 인증된 사용자를 LDAP에서 가져옵니다. LDAP를 활성화해야 합니다.
 import-status=상태 가져오기
 import-structure=스트럭처 가져오기
+import-task-isolation=Import Task Isolation Level (Automatic Copy)
+import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default value is GROUP, this means that only one site template propagation import task can run at the same time for the same target site. However, you can set its value to COMPANY as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal, in exchange for delaying site template propagations. (Automatic Copy)
 import-translation=번역 가져오기
 import-translations=번역 가져오기
 import-user-preferences-help=사용자 기본 설정은 사용자 UUID가 일치하는 경우에만 성공적으로 가져올 수 있습니다.
@@ -8958,6 +8965,8 @@ layout-set-prototype-configuration-description=사이트 템플릿에 대해 자
 layout-set-prototype-configuration-name=위치 템플렛
 layout-set-prototype-intranet-site-description=문서 및 뉴스가 있는 사이트
 layout-set-prototype-intranet-site-title=인트라넷 사이트
+layout-set-prototype-system-configuration-description=Configure system level site template options (Automatic Copy)
+layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
 layout-template=배치 템플렛
 layout-template-1-2-1-columns-i=1-2-1 Columns (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 Columns (70/30)
