--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -2261,6 +2261,11 @@ background-state-info=Background State Info (Automatic Copy)
 background-state-success=Background State Success (Automatic Copy)
 background-state-warning=Background State Warning (Automatic Copy)
 background-styles=Стили фона
+background-task-manager-configuration-name=Background Task Manager Configuration (Automatic Copy)
+background-task-workers-core-size=Workers Core Size (Automatic Copy)
+background-task-workers-core-size-help=The number of worker threads always available for executing background tasks. This setting cannot exceed the workers maximum size setting. (Automatic Copy)
+background-task-workers-max-size=Workers Maximum Size (Automatic Copy)
+background-task-workers-max-size-help=The maximum number of worker threads for executing background tasks. (Automatic Copy)
 backspace=возврат (Automatic Translation)
 bad-request=Некорректный запрос
 ban-date=Дата блокировки
@@ -7769,6 +7774,8 @@ import-siteminder-users-from-ldap=Импорт из LDAP
 import-siteminder-users-from-ldap-help=Если это проверено, пользователи, аутентифицированные из SiteMinder, которые не существуют на портале, импортируются из LDAP. LDAP должен быть включен. (Automatic Translation)
 import-status=Import Status (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
+import-task-isolation=Import Task Isolation Level (Automatic Copy)
+import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default value is GROUP, this means that only one site template propagation import task can run at the same time for the same target site. However, you can set its value to COMPANY as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal, in exchange for delaying site template propagations. (Automatic Copy)
 import-translation=Импортный перевод (Automatic Translation)
 import-translations=Import Translations (Automatic Copy)
 import-user-preferences-help=Настройки пользователей могут быть успешно импортированы когда пользовательские UUID совпадают.
@@ -8958,6 +8965,8 @@ layout-set-prototype-configuration-description=Configure when automatic propagat
 layout-set-prototype-configuration-name=Шаблоны сайтов
 layout-set-prototype-intranet-site-description=Сайт с документами и новостями (Automatic Translation)
 layout-set-prototype-intranet-site-title=Интранет-сайт (Automatic Translation)
+layout-set-prototype-system-configuration-description=Configure system level site template options (Automatic Copy)
+layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
 layout-template=Шаблон макета
 layout-template-1-2-1-columns-i=1-2-1 Колонны (50/50) (Automatic Translation)
 layout-template-1-2-1-columns-ii=1-2-1 Колонны (70/30) (Automatic Translation)
