--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -2261,6 +2261,11 @@ background-state-info=Background State Info (Automatic Copy)
 background-state-success=Background State Success (Automatic Copy)
 background-state-warning=Background State Warning (Automatic Copy)
 background-styles=Stili ozadja
+background-task-manager-configuration-name=Background Task Manager Configuration (Automatic Copy)
+background-task-workers-core-size=Workers Core Size (Automatic Copy)
+background-task-workers-core-size-help=The number of worker threads always available for executing background tasks. This setting cannot exceed the workers maximum size setting. (Automatic Copy)
+background-task-workers-max-size=Workers Maximum Size (Automatic Copy)
+background-task-workers-max-size-help=The maximum number of worker threads for executing background tasks. (Automatic Copy)
 backspace=Backspace (Automatic Translation)
 bad-request=Napačen zahtevek
 ban-date=Datum onemogočenja dostopa
@@ -7769,6 +7774,8 @@ import-siteminder-users-from-ldap=Uvozi iz LDAP
 import-siteminder-users-from-ldap-help=Če je to preverjeno, se uporabniki, ki so overjeni iz siteMinderja, ki ne obstajajo v portalu, uvozijo iz LDAP. LDAP mora biti omogočen. (Automatic Translation)
 import-status=Import Status (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
+import-task-isolation=Import Task Isolation Level (Automatic Copy)
+import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default value is GROUP, this means that only one site template propagation import task can run at the same time for the same target site. However, you can set its value to COMPANY as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal, in exchange for delaying site template propagations. (Automatic Copy)
 import-translation=Uvoz prevod (Automatic Translation)
 import-translations=Import Translations (Automatic Copy)
 import-user-preferences-help=Uporabniške nastavitve je mogoče uspešno uvoziti le, ko se uporabniški UUID-ji ujemajo. (Automatic Translation)
@@ -8958,6 +8965,8 @@ layout-set-prototype-configuration-description=Configure when automatic propagat
 layout-set-prototype-configuration-name=Poglej predloge.
 layout-set-prototype-intranet-site-description=Spletno mesto z dokumenti in novicami (Automatic Translation)
 layout-set-prototype-intranet-site-title=Mesto intranet (Automatic Translation)
+layout-set-prototype-system-configuration-description=Configure system level site template options (Automatic Copy)
+layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
 layout-template=Predloga izgleda
 layout-template-1-2-1-columns-i=1-2-1 Stolpci (50/50) (Automatic Translation)
 layout-template-1-2-1-columns-ii=1-2-1 Stolpci (70/30) (Automatic Translation)
