--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -2261,6 +2261,11 @@ background-state-info=Information om bakgrundstillstånd
 background-state-success=Bakgrundstillstånd lyckades
 background-state-warning=Varning för bakgrundstillstånd
 background-styles=Bakgrund
+background-task-manager-configuration-name=Background Task Manager Configuration (Automatic Copy)
+background-task-workers-core-size=Workers Core Size (Automatic Copy)
+background-task-workers-core-size-help=The number of worker threads always available for executing background tasks. This setting cannot exceed the workers maximum size setting. (Automatic Copy)
+background-task-workers-max-size=Workers Maximum Size (Automatic Copy)
+background-task-workers-max-size-help=The maximum number of worker threads for executing background tasks. (Automatic Copy)
 backspace=Backsteg
 bad-request=Felaktig förfrågan
 ban-date=Uteslutningsdatum
@@ -7769,6 +7774,8 @@ import-siteminder-users-from-ldap=Importera från LDAP
 import-siteminder-users-from-ldap-help=Om detta markeras kommer användare som autentiserats från SiteMinder som inte finns i portalen att importeras från LDAP. LDAP måste vara aktiverat.
 import-status=Importstatus
 import-structure=Importera struktur
+import-task-isolation=Import Task Isolation Level (Automatic Copy)
+import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default value is GROUP, this means that only one site template propagation import task can run at the same time for the same target site. However, you can set its value to COMPANY as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal, in exchange for delaying site template propagations. (Automatic Copy)
 import-translation=Importera översättning
 import-translations=Importera översättningar
 import-user-preferences-help=Användarinställningar kan bara importeras när användarens UUID-er matchar.
@@ -8958,6 +8965,8 @@ layout-set-prototype-configuration-description=I inställningarna i den här kon
 layout-set-prototype-configuration-name=Platsmallar
 layout-set-prototype-intranet-site-description=Webbplats med dokument och nyheter
 layout-set-prototype-intranet-site-title=Intranätplats
+layout-set-prototype-system-configuration-description=Configure system level site template options (Automatic Copy)
+layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
 layout-template=Formatmall
 layout-template-1-2-1-columns-i=1-2-1 kolumner (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 kolumner (70/30)
