--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -2261,6 +2261,11 @@ background-state-info=ข้อมูลสถานะพื้นหลัง
 background-state-success=สถานะพื้นหลังสำเร็จ
 background-state-warning=แจ้งเตือนสถานะพื้นหลัง
 background-styles=สไตล์พื้นหลัง
+background-task-manager-configuration-name=Background Task Manager Configuration (Automatic Copy)
+background-task-workers-core-size=Workers Core Size (Automatic Copy)
+background-task-workers-core-size-help=The number of worker threads always available for executing background tasks. This setting cannot exceed the workers maximum size setting. (Automatic Copy)
+background-task-workers-max-size=Workers Maximum Size (Automatic Copy)
+background-task-workers-max-size-help=The maximum number of worker threads for executing background tasks. (Automatic Copy)
 backspace=ปุ่มย้อนกลับ
 bad-request=คำขอไม่ถูกต้อง
 ban-date=แบนวันที่
@@ -7769,6 +7774,8 @@ import-siteminder-users-from-ldap=อิมพอร์ตจาก LDAP
 import-siteminder-users-from-ldap-help=หากเลือกตัวเลือกนี้ ผู้ใช้ที่ได้รับการพิสูจน์ตัวตนจาก SiteMinder ที่ไม่มีอยู่ในพอร์ทัลจะถูกนำเข้าจาก LDAP ต้องเปิดใช้งาน LDAP
 import-status=สถานะการนำเข้า
 import-structure=โครงสร้างการนำเข้า
+import-task-isolation=Import Task Isolation Level (Automatic Copy)
+import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default value is GROUP, this means that only one site template propagation import task can run at the same time for the same target site. However, you can set its value to COMPANY as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal, in exchange for delaying site template propagations. (Automatic Copy)
 import-translation=นำเข้าการแปล
 import-translations=นำเข้าการแปล
 import-user-preferences-help=สามารถนำเข้าการตั้งค่าผู้ใช้ได้สำเร็จเมื่อ UUID ของผู้ใช้ตรงกันเท่านั้น
@@ -8958,6 +8965,8 @@ layout-set-prototype-configuration-description=กำหนดค่าเมื
 layout-set-prototype-configuration-name=เทมเพลตไซต์
 layout-set-prototype-intranet-site-description=เว็บไซต์ที่มีเอกสารและข่าว
 layout-set-prototype-intranet-site-title=ไซต์อินทราเน็ต
+layout-set-prototype-system-configuration-description=Configure system level site template options (Automatic Copy)
+layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
 layout-template=เลย์เอาท์เท็มเพลต
 layout-template-1-2-1-columns-i=1-2-1 คอลัมน์ (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 คอลัมน์ (70/30)
