--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -2261,6 +2261,11 @@ background-state-info=Background State Info (Automatic Copy)
 background-state-success=Background State Success (Automatic Copy)
 background-state-warning=Background State Warning (Automatic Copy)
 background-styles=Kiểu giao diện nền
+background-task-manager-configuration-name=Background Task Manager Configuration (Automatic Copy)
+background-task-workers-core-size=Workers Core Size (Automatic Copy)
+background-task-workers-core-size-help=The number of worker threads always available for executing background tasks. This setting cannot exceed the workers maximum size setting. (Automatic Copy)
+background-task-workers-max-size=Workers Maximum Size (Automatic Copy)
+background-task-workers-max-size-help=The maximum number of worker threads for executing background tasks. (Automatic Copy)
 backspace=phím lùi (Automatic Translation)
 bad-request=Yêu cầu không hay
 ban-date=Ngày khóa
@@ -7769,6 +7774,8 @@ import-siteminder-users-from-ldap=Nhập dữ liệu từ LDAP
 import-siteminder-users-from-ldap-help=Nếu điều này được chọn, người dùng xác thực từ SiteMinder không tồn tại trong cổng thông tin được nhập từ LDAP. LDAP phải được kích hoạt. (Automatic Translation)
 import-status=Import Status (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
+import-task-isolation=Import Task Isolation Level (Automatic Copy)
+import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default value is GROUP, this means that only one site template propagation import task can run at the same time for the same target site. However, you can set its value to COMPANY as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal, in exchange for delaying site template propagations. (Automatic Copy)
 import-translation=Nhập dịch (Automatic Translation)
 import-translations=Import Translations (Automatic Copy)
 import-user-preferences-help=Thông tin cấu hình người dùng chỉ được nhập khẩu thành công khi định danh (UUID) giống nhau.
@@ -8958,6 +8965,8 @@ layout-set-prototype-configuration-description=Configure when automatic propagat
 layout-set-prototype-configuration-name=Các mẫu site
 layout-set-prototype-intranet-site-description=Site có Tài liệu và Tin tức (Automatic Translation)
 layout-set-prototype-intranet-site-title=Intranet Site (Automatic Translation)
+layout-set-prototype-system-configuration-description=Configure system level site template options (Automatic Copy)
+layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
 layout-template=Biểu mẫu của bố cục
 layout-template-1-2-1-columns-i=1-2-1 Cột (50/50) (Automatic Translation)
 layout-template-1-2-1-columns-ii=1-2-1 Cột (70/30) (Automatic Translation)
