--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -2261,6 +2261,11 @@ background-state-info=信息背景状态
 background-state-success=成功背景状态
 background-state-warning=警告背景状态
 background-styles=背景样式
+background-task-manager-configuration-name=Background Task Manager Configuration (Automatic Copy)
+background-task-workers-core-size=Workers Core Size (Automatic Copy)
+background-task-workers-core-size-help=The number of worker threads always available for executing background tasks. This setting cannot exceed the workers maximum size setting. (Automatic Copy)
+background-task-workers-max-size=Workers Maximum Size (Automatic Copy)
+background-task-workers-max-size-help=The maximum number of worker threads for executing background tasks. (Automatic Copy)
 backspace=退格
 bad-request=错误请求
 ban-date=禁用日期
@@ -7769,6 +7774,8 @@ import-siteminder-users-from-ldap=从LDAP中导入
 import-siteminder-users-from-ldap-help=如果选中此复选框，将从 LDAP 导入通过 SiteMinder 进行身份验证且不存在于门户中的用户。必须启用 LDAP。
 import-status=导入状态
 import-structure=导入结构
+import-task-isolation=Import Task Isolation Level (Automatic Copy)
+import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default value is GROUP, this means that only one site template propagation import task can run at the same time for the same target site. However, you can set its value to COMPANY as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal, in exchange for delaying site template propagations. (Automatic Copy)
 import-translation=导入翻译
 import-translations=导入翻译
 import-user-preferences-help=只有当用户的UUID相匹配时，用户配置才能够成功导入。
@@ -8960,6 +8967,8 @@ layout-set-prototype-configuration-description=借助此配置中的设置，您
 layout-set-prototype-configuration-name=站点模板
 layout-set-prototype-intranet-site-description=有内容和新闻的站点
 layout-set-prototype-intranet-site-title=内网
+layout-set-prototype-system-configuration-description=Configure system level site template options (Automatic Copy)
+layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
 layout-template=页面模板
 layout-template-1-2-1-columns-i=1-2-1 列 (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 列 (70/30)
