--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -2261,6 +2261,11 @@ background-state-info=Background State Info (Automatic Copy)
 background-state-success=Background State Success (Automatic Copy)
 background-state-warning=Background State Warning (Automatic Copy)
 background-styles=背景樣式
+background-task-manager-configuration-name=Background Task Manager Configuration (Automatic Copy)
+background-task-workers-core-size=Workers Core Size (Automatic Copy)
+background-task-workers-core-size-help=The number of worker threads always available for executing background tasks. This setting cannot exceed the workers maximum size setting. (Automatic Copy)
+background-task-workers-max-size=Workers Maximum Size (Automatic Copy)
+background-task-workers-max-size-help=The maximum number of worker threads for executing background tasks. (Automatic Copy)
 backspace=退格
 bad-request=錯誤請求
 ban-date=封鎖日期
@@ -7769,6 +7774,8 @@ import-siteminder-users-from-ldap=從LDAP匯入
 import-siteminder-users-from-ldap-help=如果選中此核取方塊，將從 LDAP 導入通過 SiteMinder 進行身份驗證且不存在於門戶中的用戶。必須啟用 LDAP。
 import-status=匯入狀態
 import-structure=匯入結構
+import-task-isolation=Import Task Isolation Level (Automatic Copy)
+import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default value is GROUP, this means that only one site template propagation import task can run at the same time for the same target site. However, you can set its value to COMPANY as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal, in exchange for delaying site template propagations. (Automatic Copy)
 import-translation=匯入翻譯
 import-translations=匯入翻譯檔
 import-user-preferences-help=使用者偏好當使用者UUID符合時會被成功匯入。
@@ -8959,6 +8966,8 @@ layout-set-prototype-configuration-description=Configure when automatic propagat
 layout-set-prototype-configuration-name=站台版型
 layout-set-prototype-intranet-site-description=有文件與新聞的站台
 layout-set-prototype-intranet-site-title=內部網路站台
+layout-set-prototype-system-configuration-description=Configure system level site template options (Automatic Copy)
+layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
 layout-template=佈局範本
 layout-template-1-2-1-columns-i=1-2-1 欄 (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 欄 (70/30)
